Fixing issues with position during d&d on mobile and broken data type for id stored after reordering wiht d&d

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -429,9 +429,6 @@ body.dark {
   .main__task-list {
     gap: 0.9px;
   }
-  .main__list-container {
-    position: relative;
-  }
   .main__filters {
     position: absolute;
     bottom: -6.4rem;
