--- a/src/sass/base/_queries.scss
+++ b/src/sass/base/_queries.scss
@@ -35,10 +35,6 @@
     gap: 0.9px;
   }
 
-  .main__list-container {
-    position: relative;
-  }
-
   .main__filters {
     position: absolute;
     bottom: -6.4rem;
